[gd_scene load_steps=2 format=3 uid="uid://dx86u8lk4jsed"]

[ext_resource type="Script" path="res://Editor/Scenery/SceneryEditorUI.gd" id="1_6eop4"]

[node name="SceneryEditorUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_6eop4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Ground Size"
horizontal_alignment = 1

[node name="SizeSpinbox" type="SpinBox" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 20.0
max_value = 256.0
value = 64.0
alignment = 1

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="NormalModeButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Normal"

[node name="FlattenModeButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Flatten"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="RaiseButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Raise"

[node name="LowerButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Lower"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Brush Size"

[node name="BrushSizeSpinbox" type="SpinBox" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 15.0
value = 1.0
alignment = 1

[node name="BrushSizeSlider" type="HSlider" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 1.0
max_value = 15.0
value = 1.0
tick_count = 15

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Time of day"

[node name="TimeSpinbox" type="SpinBox" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 24.0
step = 0.1
value = 10.0
alignment = 1

[node name="TimeSlider" type="HSlider" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 24.0
step = 0.1
value = 10.0
tick_count = 240

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
text = "Cloudiness"

[node name="CloudSpinbox" type="SpinBox" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.4
alignment = 1

[node name="CloudSlider" type="HSlider" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 0.4
tick_count = 20

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer4/HBoxContainer"]
layout_mode = 2
text = "Gloomyness"

[node name="GloomySpinbox" type="SpinBox" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05
alignment = 1

[node name="GloomySlider" type="HSlider" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.05
tick_count = 20
